--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,20 @@ body {
     background-color: #efefef;
 }
 
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+
 h1 {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 48px;
-    text-shadow: 0px 0px 1px black;
+    text-shadow: 0 0 1 black;
+    padding: 25px;
 }
 
 
@@ -29,19 +32,21 @@ h1 {
 .price-col {
     background: #fff;
     padding: 10% 15%;
-    border-radius: 10px;
+    border-radius: 16px;
     color: black;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
 .price-col p{
-    font-size: 22px;
+    font-size: 24px;
+    text-shadow: 0 0 1 black;
 }
 
 .price-col h3{
-    font-size: 44px;
-    margin: 20px 0 40px;
+    font-size: 40px;
+    margin: 15px 0;
     font-weight: 500px;
 }
 
@@ -51,8 +56,9 @@ h1 {
 
 .price-col ul {
     text-align: left;
-    margin: 20px 0;
+    margin: 50px 0;
     list-style: none;
+    font-size: 16px;
 }
 
 .price-col ul li {
@@ -60,7 +66,7 @@ h1 {
 }
 
 .price-col ul li::before{
-    content: '\2023';
+    content: '\2022';
     color: blue;
     font-weight: bold;
     margin-right: 8px;
@@ -69,16 +75,25 @@ h1 {
 .price-col button {
     width: 100%;
     padding: 14px 0;
-    background-color: transparent;
-    color: black;
-    font-size: 15px;
-    border: 1px solid black;
+    background-color: black;
+    color: white;
+    font-size: 16px;
+    border: 0;
     border-radius: 16px;
-    margin-top: 30px;
+    margin-top: 20px;
     cursor: pointer;
-    transition: background 0.5s;
 }
 
 .price-col button:hover{
-    background: #efefef;
+    scale: 1.10;
+}
+
+footer {
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: black;
+    padding: 0;
 }
